Fix spacing between labels and info text

--- a/resources/less/hakija.less
+++ b/resources/less/hakija.less
@@ -109,6 +109,9 @@
 
 .application__form-info-text {
   font-size: 14px;
+  p {
+    margin-top: 8px;
+  }
 }
 
 .application__form-field-list {
